# LightWeightPlatformDevelop

./: README.md  cargo.toml  flake.nix
project2/: README.md  index.css  index.html  index.js
project2/core/: Cargo.toml  justfile
project2/core/src/: animation.rs  attribute.rs  hero.rs  input.rs  lib.rs  render.rs
project2/core/src/entity/: bullet.rs  enemy.rs  hero.rs  mod.rs
project2/frontend/: index.html  utils.js
project2/polywar/: Cargo.toml  LICENSE_MIT
project2/polywar/src/: lib.rs
project2/www/: bun.lockb  index.html  index.js  package.json
