[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
nalgebra = "0.32.5"
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"
